🐛 prevent horizontal scrolling, remove max-height
Component sidebar and sidebar contained a max-height and position sticky that caused the user to have to scroll on desktop devices. For mobile devices the overflow auto property allowed for horiztonal scrolling when overflowed

--- a/frontend/scss/components/organisms/component-sidebar.scss
+++ b/frontend/scss/components/organisms/component-sidebar.scss
@@ -27,12 +27,10 @@ nav[toolbar] {
   -webkit-overflow-scrolling: touch;
 
   @media (min-width: 768px){
-    height: 100vh;
-    position: sticky;
+    height: auto;
     overflow: auto;
-    max-height: calc(100vh - 168px);
   }
-  
+
   &::-webkit-scrollbar {
     width: 2px;
   }
